data read/update/delete crimeDetails & criminalDetails authentication POLICESTRACK SYSTEM

--- a/src/main/resources/templates/user/Crime.html
+++ b/src/main/resources/templates/user/Crime.html
@@ -49,12 +49,12 @@
 		<div class="container">
 			<h2 class="text-center mb-4">Criminal Crime Details</h2>
 			<form id="crimeForm" class="needs-validation" novalidate action="/savecrimeDetails" method="post">
-			
-			<div class="form-group">
+
+				<!--<div class="form-group">
 					<label for="crimeType">Crime id :</label>
 					<textarea class="form-control" name="criminalId11" id="criminalId11" rows="3" required></textarea>
 					<div class="invalid-feedback">Please enter criminal id.</div>
-				</div>
+				</div>-->
 				<div class="form-group">
 					<label for="section">Section:</label>
 					<select class="form-control" name="section" id="section" required>
