--- a/src/main/resources/templates/user/c.html
+++ b/src/main/resources/templates/user/c.html
@@ -78,7 +78,7 @@
 						<option value="pending">Pending</option>
 					</select>
 				</div><br>
-				<center><button type="submit" class="btn btn-primary">Submit</button></center>
+				<center><a href="Crime"><button type="submit"  class="btn btn-primary">Submit</button></a></center>
 			</form>
 		</div>
 
