Police track system 2 table relation succeced data add no Dublicate record insert in Show data form (Aadhar search Form)

--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -6,7 +6,7 @@
 <body class="d-flex flex-column">
 	<div th:fragment="navbarAdmin">
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top">
-			<a class="navbar-brand" th:href="@{/}">ADMIN PORTAL</a> <button class="navbar-toggler" type="button"
+			<a class="navbar-brand" th:href="@{/admin/index}">ADMIN PORTAL</a> <button class="navbar-toggler" type="button"
 				data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
