--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -43,7 +43,7 @@
 										class="form-control">
 								</div>
 								<div class="mb-3">
-									<label>Enter Qualification</label> <input type="text"
+									<label>Enter Position</label> <input type="text"
 										name="qualification" class="form-control">
 								</div>
 								<div class="mb-3">
