--- a/src/main/resources/templates/admin/about.html
+++ b/src/main/resources/templates/admin/about.html
@@ -90,12 +90,7 @@
 						<p class="m-0">+100</p>
 					</div>-->
 					
-						<div>
-
-					<a href="user"> <img class="" th:src="@{/img/1.png}" height="50px"></a>
-
 					
-				</div>
 				</div>
 			</div>
 		</div>
@@ -105,7 +100,7 @@
 
 	<!-- Navbar Start -->
 	<div class="container-fluid p-0 nav-bar">
-		<nav class="navbar navbar-expand-lg bg-none navbar-dark py-0">
+		<nav class="navbar navbar-expand-lg bg-none navbar-light py-0">
 			<a href="" class="navbar-brand d-block d-lg-none">
 				<h1 class="m-0 display-5 text-capitalize font-italic text-white"><span
 						class="text-primary">Maharashtra</span>police</h1>
@@ -116,19 +111,15 @@
 			<div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 				<div class="navbar-nav m-auto py-4">
 
-					<a href="/user/index" class="nav-item nav-link active">Home</a>
-					<a href="/user/about" class="nav-item nav-link"> Maharashtra Police</a>
+					<a href="/admin/index" class="nav-item nav-link active">Home</a>
+					<!--<a href="/admin/about" class="nav-item nav-link"> Maharashtra Police</a>
 					<div class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
 						<div class="dropdown-menu text-capitalize">
-							<!--<a href="crime" class="dropdown-item">Crime Detail</a>
-							<a href="c" class="dropdown-item">Criminal Detail</a>-->
-							
-							<a href="/user/c" class="dropdown-item">Crime Detail</a>
-							<a href="/user/showData" class="dropdown-item">Exist Criminal</a>
-							
+							<a href="crime" class="dropdown-item">Crime Detail</a>
+							<a href="c" class="dropdown-item">Criminal Detail</a>
 						</div>
-					</div>
+					</div>-->
 					<!--<div class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Edit</a>
 						<div class="dropdown-menu text-capitalize">
@@ -150,17 +141,17 @@
 		</nav>
 	</div>
 	<!-- Navbar End -->
-
-	<!-- Carousel Start -->
+	
+	
 	<div class="container-fluid p-0">
 		<div id="blog-carousel" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="w-100" th:src="@{/img/carousel-1.jpg}" alt="Image">
+					<img class="w-100" th:src="@{/img/police.jpg}" alt="Image">
 					<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 						<h4 class="text-primary m-0">Your Safety, Our Efforts</h4>
 						<h4 class="display-4 m-0 mt-2 mt-md-3 text-white">Best Security Service</h4>
-						<a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Learn More</a>
+						<a href="/admin/index" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4">Home</a>
 					</div>
 				</div>
 				<!--<div class="carousel-item">
@@ -187,177 +178,10 @@
 	<!-- Carousel End -->
 
 
-	<!-- Features Start -->
-	<div class="container-fluid py-5 py-lg-0 feature">
-		<div class="row py-5 py-lg-0">
-			<div class="col-lg-4 p-0">
-				<div class="feature-item d-flex align-items-center border-right px-5 mb-4 mb-lg-0">
-					<i class="flaticon-policeman display-3 text-primary mr-4"></i>
-					<div class="">
-						<h5 class="mb-3">Professional Staff</h5>
-						<p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci
-							velit id libero
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 p-0">
-				<div class="feature-item d-flex align-items-center border-right px-5 mb-4 mb-lg-0">
-					<i class="flaticon-helmet display-3 text-primary mr-4"></i>
-					<div class="">
-						<h5 class="mb-3">Latest Equipments</h5>
-						<p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci
-							velit id libero
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 p-0">
-				<div class="feature-item d-flex align-items-center px-5">
-					<i class="flaticon-surveillance display-3 text-primary mr-4"></i>
-					<div class="">
-						<h5 class="mb-3">24/7 Support</h5>
-						<p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci
-							velit id libero
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Features End -->
+<br>
+<br>
+<br>
 
-	<!--
-     About Start 
-    <div class="container-fluid mb-5" style="background: #f6f6f6;">
-        <div class="row align-items-center">
-            <div class="col-lg-6 px-0">
-                <img width="100%" class="img-fluid" src="img/about.jpg" alt="Image">
-            </div>
-            <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5">
-                <h5 class="text-primary mb-3">About Us</h5>
-                <h1 class="mb-4">15 Years Experience</h1>
-                <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
-                <div class="row py-2">
-                    <div class="col-sm-6">
-                        <i class="flaticon-approved display-3 text-primary"></i>
-                        <h5 class="mt-2">Govt Approved</h5>
-                        <p>Ipsum sanctu dolor ipsum dolore sit et kasd duo</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <i class="flaticon-medal display-3 text-primary"></i>
-                        <h5 class="mt-2">Award Winning</h5>
-                        <p>Ipsum sanctu dolor ipsum dolore sit et kasd duo</p>
-                    </div>
-                </div>
-                <a href="" class="btn btn-lg px-4 btn-primary">Learn More</a>
-            </div>
-        </div>
-    </div>
-     About End 
--->
-
-	<!-- Services Start -->
-	<!--<div class="container pt-5">
-        <div class="d-flex flex-column text-center mb-5">
-            <h5 class="text-primary mb-3">Our Services</h5>
-            <h1 class="m-0">Premium Security Services</h1>
-        </div>
-        <div class="row pb-3">
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-1.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-desk font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Office Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-2.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-home font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Home Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-3.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-factory font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Industry Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-4.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-transportation font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Transport Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-5.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-desk font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Objects Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card mb-2 p-3">
-                    <img class="card-img-top" src="img/service-6.jpg" alt="">
-                    <div class="card-body bg-secondary d-flex align-items-center p-0">
-                        <h3 class="flaticon-bodyguard font-weight-normal d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white m-0 mr-3" style="width: 45px; height: 45px;"></h3>
-                        <h6 class="card-title text-white text-truncate m-0">Private Security</h6>
-                    </div>
-                    <div class="card-footer">
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo et.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-     Services End 
-
--->
-
-
-	<!--     Subscribe Start 
-    <div class="container-fluid bg-primary my-5 py-5 text-center">
-        <h1 class="text-white font-weight-bold mt-5 mb-3">Subscribe Our Newsletter</h1>
-        <p class="text-white mb-4">Subscribe and get Our latest article in your inbox</p>
-        <form class="form-inline justify-content-center mb-5">
-            <div class="input-group">
-                <input type="text" class="form-control-lg" placeholder="Your Email">
-                <div class="input-group-append">
-                    <button class="btn btn-secondary" type="submit">Subscribe</button>
-                </div>
-            </div>
-        </form>
-    </div>
-     Subscribe End 
--->
 
 	<!-- Team Start -->
 	<div class="container pt-5 pb-3">
@@ -442,78 +266,7 @@
 	</div>
 	<!-- Team End -->
 
-
-
-	<!-- Blog Start -->
-	<div class="container pt-5">
-		<div class="d-flex flex-column text-center mb-5">
-			<h5 class="text-primary mb-3">Recent Blog</h5>
-			<h1 class="m-0">Latest From Our Blog</h1>
-		</div>
-		<div class="row pb-3">
-			<div class="col-lg-4 mb-4">
-				<div class="card mb-2 p-3">
-					<img class="card-img-top" th:src="@{/img/blog-1.jpg}" alt="">
-					<div class="card-body bg-secondary d-flex align-items-center p-0">
-						<h6 class="card-title text-white text-truncate m-0 ml-3">Diam amet eos at no eos</h6>
-						<a href=""
-							class="fa fa-link d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white text-decoration-none m-0 ml-auto"
-							style="width: 45px; height: 45px;"></a>
-					</div>
-					<div class="card-footer py-3 px-4">
-						<div class="d-flex mb-2">
-							<small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-							<small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-							<small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-						</div>
-						<p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est
-							magna diam eos, rebum sit vero stet ipsum justo et.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="card mb-2 p-3">
-					<img class="card-img-top" th:src="@{/img/blog-2.jpg}" alt="">
-					<div class="card-body bg-secondary d-flex align-items-center p-0">
-						<h6 class="card-title text-white text-truncate m-0 ml-3">Diam amet eos at no eos</h6>
-						<a href=""
-							class="fa fa-link d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white text-decoration-none m-0 ml-auto"
-							style="width: 45px; height: 45px;"></a>
-					</div>
-					<div class="card-footer py-3 px-4">
-						<div class="d-flex mb-2">
-							<small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-							<small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-							<small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-						</div>
-						<p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est
-							magna diam eos, rebum sit vero stet ipsum justo et.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 mb-4">
-				<div class="card mb-2 p-3">
-					<img class="card-img-top" th:src="@{/img/blog-3.jpg}" alt="">
-					<div class="card-body bg-secondary d-flex align-items-center p-0">
-						<h6 class="card-title text-white text-truncate m-0 ml-3">Diam amet eos at no eos</h6>
-						<a href=""
-							class="fa fa-link d-flex flex-shrink-0 align-items-center justify-content-center bg-primary text-white text-decoration-none m-0 ml-auto"
-							style="width: 45px; height: 45px;"></a>
-					</div>
-					<div class="card-footer py-3 px-4">
-						<div class="d-flex mb-2">
-							<small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-							<small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-							<small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-						</div>
-						<p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est
-							magna diam eos, rebum sit vero stet ipsum justo et.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Blog End -->
+->
 
 
 	<!-- Footer Start -->
