--- a/src/main/resources/templates/admin/editArticle.html
+++ b/src/main/resources/templates/admin/editArticle.html
@@ -142,7 +142,7 @@
 				<div class="form-group row">
 					<div class="offset-2 col-6">
 						<button type="submit" class="btn btn-success">Update Article</button>
-						<a class="btn btn-danger" th:href="@{/admin}">Cancel</a>
+						<a class="btn btn-danger" th:href="@{/admin/}">Cancel</a>
 					</div>
 				</div>
 			</fieldset>
