--- a/src/main/resources/templates/admin/userprofile.html
+++ b/src/main/resources/templates/admin/userprofile.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <!-- Created By CodingLab - www.codinglabweb.com -->
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"> 
 
-
+	
 <head>
 	<meta charset="UTF-8">
 	<title> Admin Data </title>
-	<link rel="stylesheet" href="css/style1.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-
+	<!--    <link rel="stylesheet" href="css/style1.css">
+-->
+<!--	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+-->
 	<link href="img/favicon.ico" rel="icon">
 
 	<!-- Font Awesome -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+	<!--	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+-->
 	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
 
 
 
 	<!-- Flaticon Font -->
-	<link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+	<!--	<link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+-->
 	<link th:href="@{/lib/flaticon/font/flaticon.css}" rel="stylesheet">
 
 
 	<!-- Libraries Stylesheet -->
-	<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
+	<!--	<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+-->
 	<link th:href="@{/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
 
 	<link th:href="@{/css/style.css}" rel="stylesheet">
 
-	<link th:href="@{/css/style2.css}" rel="stylesheet">
-
+	<link th:href="@{/css/style2.css}" rel="stylesheet"> 
+	
 
 </head>
 
@@ -38,9 +41,9 @@
   min-height: 100vh;
   margin: 0;
 ">
-
+	
 	<!-- Navbar-->
-
+	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">Maharashtra Police </a>
@@ -57,8 +60,7 @@
 
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-							<li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin/">Home</a>
-							</li>
+							<li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin/">Home</a></li>
 						</ul>
 
 						<li class="nav-item"><a class="nav-link" href="register">Register</a></li>
@@ -70,15 +72,14 @@
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-							<li class="nav-item"><a class="nav-link active" aria-current="page" href="/user/">Home</a>
-							</li>
+							<li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin/">Home2</a></li>
 						</ul>
 						<li class="nav-item"><a class="nav-link" href="#">[[${user.getFullName()}]]</a></li>
 						<li class="nav-item dropdown me-6">
-							<!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 								data-bs-toggle="dropdown" aria-expanded="false">
 								[[${user.getFullName()}]]
-							</a>-->
+							</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li><a class="dropdown-item" href="#">Edit Profile</a></li>
 								<li><a class="dropdown-item" href="changPass">Change Password</a></li>
@@ -90,59 +91,64 @@
 						</li>
 					</ul>
 				</th:block>
+				
+				
 
 			</div>
 		</div>
 	</nav>
+	
+	<br><br>
+	
+	
 
-	<br>
-	<br>
 
-
-
+	
 	<!-- end Navbar-->
-
-
+	
+	
 	<main style="  flex: 3;
 
 ">
-		<container>
-			<div class="main-box">
-				<div class="content">
-					<input type="checkbox" id="check">
-					<label class="box" for="check">
-						<div class="share">INFO</div>
-						<div class="cancel">CANCEL</div>
-					</label>
+	<container>
+		
+	<div class="main-box">
+		<div class="content">
+			<input type="checkbox" id="check">
+			<label class="box" for="check">
+				<div class="share">INFO</div>
+				<div class="cancel">CANCEL</div>
+			</label>
 
-					<!--<img class="card-img-top" th:src="@{/img/blog-3.jpg}" alt="">-->
+			<!--<img class="card-img-top" th:src="@{/img/blog-3.jpg}" alt="">-->
 
 
-					<div class="image-box">
-						<img th:src="@{/img/3.jpg}" alt="">
-						<div class="about">
-							<div class="details">
-								<div class="name">[[${user.fullName}]]</div>
-								<div class="job">[[${user.email}]] | [[${user.mobileNumber}]]</div>
-								<center>
-									<p><a href="/logout"> Logout </a></p>
-								</center>
-								<div class="icon">
-									<a href="#"><i class="fab fa-facebook-f"></i></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-instagram"></i></a>
-									<a href="#"><i class="fab fa-youtube"></i></a>
-								</div>
-							</div>
+
+			<div class="image-box">
+				<img th:src="@{/img/3.jpg}" alt="">
+				<div class="about">
+					<div class="details">
+						<div class="name">[[${user.fullName}]]</div>
+						<div class="job">[[${user.email}]] | [[${user.mobileNumber}]]</div>
+						<center>
+							<p><a href="/logout"> Logout </a></p>
+						</center>
+						<div class="icon">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-twitter"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-youtube"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
-
-		</container>
+		</div>
+	</div>
+	
+	</container>
 	</main>
 	<br><br><br>
-	<br><br><br>
+		<br><br><br>
 	<br><br><br>
 	<br><br><br>
 	<br><br><br>
@@ -158,10 +164,7 @@
 			<div class="col-lg-4 col-md-12 mb-5">
 				<h1 class="mb-3 display-5 text-capitalize font-italic text-white"><span
 						class="text-primary">Safety</span>First</h1>
-				<p class="m-0">Our major responsibility is to protect public order. At the district level, the IPS
-					prioritises maintaining peace and order, which is a shared responsibility of IPS and IAS officers;
-					detecting and preventing crime; and traffic control, drug prevention, accident prevention and
-					management among other things.</p>
+				<p class="m-0">Our major responsibility is to protect public order. At the district level, the IPS prioritises maintaining peace and order, which is a shared responsibility of IPS and IAS officers; detecting and preventing crime; and traffic control, drug prevention, accident prevention and management among other things.</p>
 			</div>
 			<div class="col-lg-8 col-md-12">
 				<div class="row">
@@ -170,8 +173,7 @@
 						<div class="d-flex flex-column justify-content-start">
 							<a class="text-white mb-2" href="index"><i class="fa fa-angle-right mr-2"></i>Home</a>
 							<a class="text-white mb-2" href="about"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our
-								Services</a>
+							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
 							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
 							<a class="text-white" href="contact"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
 						</div>
@@ -181,8 +183,7 @@
 						<div class="d-flex flex-column justify-content-start">
 							<a class="text-white mb-2" href="index"><i class="fa fa-angle-right mr-2"></i>Home</a>
 							<a class="text-white mb-2" href="about"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our
-								Services</a>
+							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
 							<a class="text-white mb-2" href="service"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
 							<a class="text-white" href="contact"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
 						</div>
@@ -234,7 +235,7 @@
 	</div>
 	<!-- Footer End -->
 
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
@@ -253,8 +254,8 @@
 	<script src="lib/waypoints/waypoints.min.js"></script>
 	<script src="lib/counterup/counterup.min.js"></script>
 	<script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-
+	
+	
 	<script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
 	<script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{lib/easing/easing.min.js}"></script>
@@ -265,17 +266,16 @@
 	<!-- Contact Javascript File -->
 	<script src="mail/jqBootstrapValidation.min.js"></script>
 	<script src="mail/contact.js"></script>
-
+	
 	<script th:src="@{mail/jqBootstrapValidation.min.js}"></script>
 	<script th:src="@{mail/contact.js}"></script>
 
 	<!-- Template Javascript -->
 	<script src="js/main.js"></script>
-
+	
 	<script th:src="@{js/main.js}"></script>
-
-
-
+	
+	
+	
 </body>
-
 </html>
