--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
 						</span>Police</h1>
 				</a>
 			</div>
-			<div class="col-lg-8 text-center text-lg-right">
+		<!--	<div class="col-lg-8 text-center text-lg-right">
 				<div class="d-inline-flex align-items-center">
 					<div class="d-inline-flex flex-column text-center pr-3 border-right">
 						<h6>Our Stations</h6>
@@ -77,7 +77,7 @@
 						<p class="m-0">+100</p>
 					</div>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<!-- Topbar End -->
@@ -95,17 +95,17 @@
 			</button>
 			<div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 				<div class="navbar-nav m-auto py-4">
-					<a href="index.html" class="nav-item nav-link active">Home</a>
-					<a href="about.html" class="nav-item nav-link">About</a>
-					<a href="service.html" class="nav-item nav-link">Services</a>
-					<a href="guard.html" class="nav-item nav-link"> Maharashtra Police</a>
-					<div class="nav-item dropdown">
+					<a href="/" class="nav-item nav-link active">Home</a>
+				<!--	<a href="about" class="nav-item nav-link">About</a>
+					<a href="service.html" class="nav-item nav-link">Services</a>-->
+					<a href="about" class="nav-item nav-link"> Maharashtra Police</a>
+				<!--	<div class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
 						<div class="dropdown-menu text-capitalize">
 							<a href="blog.html" class="dropdown-item">Maharashtra Police</a>
 							<a href="single.html" class="dropdown-item">Blog Detail</a>
 						</div>
-					</div>
+					</div>-->
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 
